Fixed: Downloading progress won't cutoff series title prematurely
Closes #620

--- a/src/UI/Calendar/calendar.less
+++ b/src/UI/Calendar/calendar.less
@@ -206,8 +206,9 @@
   }
 
   .chart {
-    margin-top  : 2px;
-    margin-right: 2px;
+    margin-top   : 2px;
+    margin-right : 2px;
+    line-height  : 12px;
   }
 
   .legend-labels {
